overflow-fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@
 }
 
 html, body{
-    overflow: hidden;
+    overflow-x: hidden;
     background: #ddd;
 }
 
